# warrant-shell

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  manifest_request.yml
.github/workflows/: ci.yml  release.yml
docs/: REGISTRY_SIGNING.md
e2e/: Dockerfile  README.md  run.sh  test-claude.sh  test-codex.sh  test-general.sh  test-security.sh
scripts/: build-release-dev.sh  install-dev.sh  install.sh  update-package-denylist.sh  wsh-shell
src/: app.rs  audit.rs  bundles.rs  cli.rs  compiler.rs  config.rs  denylist_update.rs  draft.rs  elevation.rs  exec.rs  guard.rs  lib.rs  main.rs  manifest.rs  package_denylist.rs  parser.rs  paths.rs  policy.rs  registry.rs  setup.rs  shell.rs  shell_parser.rs  transforms.rs  trusted_tools.rs  tui_edit.rs
tests/: audit_daemon_tests.rs  audit_tests.rs  autodiscovery_tests.rs  cli_integration.rs  deny_flags_tests.rs  manifest_refactor_tests.rs  package_denylist_tests.rs  profile_tests.rs  security_regression_tests.rs  shell_compat_tests.rs  use_case_tests.rs
