[package]
name = "wsh"
version = "0.1.0"
edition = "2024"
description = "Cryptographically signed capability policies for AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/warrant-sh/warrant-shell"
homepage = "https://warrant.sh"
keywords = ["ai", "security", "capability", "policy", "cli"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "wsh"
path = "src/bin/wsh.rs"

[[bin]]
name = "wsh-auditd"
path = "src/bin/wsh_auditd.rs"

[dependencies]
warrant-core = { git = "https://github.com/warrant-sh/warrant-core", branch = "main" }
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"
sha2 = "0.10"
hmac = "0.12"
which = "8"
fs2 = "0.4"
toml = "1"
ratatui = "0.29"
crossterm = "0.28"
ed25519-dalek = "2.2.0"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
